# oncp-mcp-server

./: .env.example  README.md  main.py  plan.md  pyproject.toml  requirements.md  tasks.md
app/: __init__.py  client.py  http_client.py  server.py  settings.py  tools.py
scripts/: smoke_test.py
tests/: __init__.py  test_client.py
